# abstractive-question-answering-with-LLM

./: .gitignore  README.md  pyproject.toml
src/config/: Config.py  configs.py
src/lib/Embeddings/: HFEmbeddings.py  tools.py
src/lib/VectorDb/: AbstractVectorDb.py  FAISSVectorDb.py  tools.py
src/lib/common/: tools.py
src/lib/data_tools/: ingest_data.py  read_file.py  visualization.py
src/notebooks/experiment_1/: main.ipynb
src/notebooks/prepare_data/: truncate_data.ipynb
src/scripts/: load_passages_to_db.py
