[tool.poetry]
name = "mt"
version = "0.1.0"
description = ""
authors = ["Jedrzej Smok <jsmok@man.poznan.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
requests = "^2.32.3"
jupyter = "^1.0.0"
pandas = "^2.2.2"
torch = "^2.3.1"
sentence-transformers = "^3.0.1"
openai = "^1.33.0"
pydantic = "^2.7.3"
fastapi = "^0.111.0"
langchain = "^0.2.3"
gradio = "^4.36.1"
polars = "^0.20.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"