[tool.poetry]
name = "mt"
version = "0.1.0"
description = ""
authors = ["Jedrzej Smok <jsmok@man.poznan.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
requests = "^2.32.3"
jupyter = "^1.0.0"
pandas = "^2.2.2"
torch = "^2.3.1"
sentence-transformers = "^3.0.1"
openai = "^1.33.0"
pydantic = "^2.7.3"
fastapi = "^0.111.0"
langchain = "^0.2.3"
gradio = "^4.36.1"
polars = "^0.20.31"
transformers = "^4.41.2"
huggingface-hub = {extras = ["cli"], version = "^0.23.3"}
faiss-gpu = "^1.7.2"
pyyaml = "^6.0.1"
langchain-community = "^0.2.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"